--- a/A-What you need to know/Who can be a sole trader.htm
+++ b/A-What you need to know/Who can be a sole trader.htm
@@ -258,27 +258,16 @@
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
                                                         <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body1">Any other country	</td>
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body1">You need a residency title to start business activity. See <a href="#residency_title">here</a> for details</td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body1">You need a residency title to start business activity. See below for details</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
                                             <p><![CDATA[	]]></p>
                                             <p>*)&#160;The European Economic Area members are:&#160;the UE&#160;member states and Norway, Iceland, and Lichtenstein</p>
-                                            <h4>Citizens of other countries</h4>
+                                            <h3>Citizens of other countries</h3>
                                             <p style="text-align: justify;">Citizens of countries not being members of the EU or of the European Economic Area can start and run a business in Poland on the same terms as Polish citizens, if they have a residency title giving such right. The relevant titles are listed in Article 4 sec. 2, 4 i 5 of <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">the Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland.</a></p>
-                                            <p>These <a name="residency_title"></a>titles are:</p>
-                                            <ol style="list-style-type: upper-roman;">
-                                                <li value="1">Having in the Republic of Poland:<ol style="list-style-type: lower-alpha;"><li value="1">a permanent residence permit</li><li value="2">a residence permit for a long-term resident of the European Union</li><li value="3">a temporary residence permit granted in connection with, inter alia, family reunion with a person legally residing in Poland, or studies in Poland</li><li value="4">a refugee status</li><li value="5">subsidiary protection</li><li value="6">a permit for residence for humanitarian reasons or a permit for a tolerated stay</li><li value="7">a temporary residence permit, and being married to a Polish citizen residing in the territory of the Republic of Poland</li><li value="8">a temporary residence permit for the purpose of conducting business activity, granted in connection with the continuation of business activity already conducted on the basis of an entry in the Central Register and Information on Business Activity</li></ol></li>
-                                                <li value="2">Temporary protection in Poland</li>
-                                                <li value="3">A valid Polish Card</li>
-                                                <li value="4">Being a family member of a UE citizen, i.e.:</li>
-                                                <ul>
-                                                    <li>a spouse of a UE citizen</li>
-                                                    <li>a direct descedant (child) of a UE citizen or a UE citzen’s spouse, aged to 21, or a dependant of a EU citizen or a EU citizen’s spouse</li>
-                                                    <li>a direct ascendant (parent) a UE citizen or a UE citzen’s spouse, being a dependant of a EU citizen or a EU citizen’s spouse</li>
-                                                </ul>
-                                                <li value="5">Having applied for a permit for a temporary or permanent stay – until a decision issued becomes final and biding</li>
-                                            </ol>
+                                            <p style="text-align: justify;">Consult the list of the relevant residency titles <a href="../Who is this guide for/Who is this guide for.htm">here</a>.</p>
+                                            <p>&#160;</p>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
                                                 <ol>
