--- a/Who is this guide for/Who is this guide for.htm
+++ b/Who is this guide for/Who is this guide for.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" lang="en-gb" xml:lang="en-gb" class="_Skins_HTML5___Top_Navigation" data-mc-search-type="Stem" data-mc-help-system-file-name="Default.xml" data-mc-path-to-help-system="../" data-mc-has-content-body="True" data-mc-toc-path="" data-mc-target-type="WebHelp2" data-mc-runtime-file-type="Topic;Default" data-mc-preload-images="false" data-mc-in-preview-mode="false">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" lang="en-gb" xml:lang="en-gb" class="_Skins_HTML5___Top_Navigation" data-mc-search-type="Stem" data-mc-help-system-file-name="Default.xml" data-mc-path-to-help-system="../" data-mc-has-content-body="True" data-mc-toc-path="Who is this guide for" data-mc-target-type="WebHelp2" data-mc-runtime-file-type="Topic;Default" data-mc-preload-images="false" data-mc-in-preview-mode="false">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta charset="utf-8" /><title>What you need to know</title>
+        <meta charset="utf-8" /><title>Who is this guide for</title>
         <link href="../Skins/Default/Stylesheets/Slideshow.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
         <link href="../Skins/Default/Stylesheets/TextEffects.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
         <link href="../Skins/Default/Stylesheets/Topic.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
@@ -214,24 +214,36 @@
                                             </div>
                                         </div>
                                         <div role="main" id="mc-main-content">
-                                            <h1>What you need to know</h1>
-                                            <p>&#160;</p>
-                                            <ul>
-                                                <li><a href="Who can be a sole trader.htm">Who can be a sole trader</a>
-                                                </li>
-                                                <li><a href="Types of business activity.htm">Available types of business</a>
-                                                </li>
-                                                <li><a href="Single tradership - pros and cons.htm">Sole tradership - pros and cons</a>
-                                                </li>
-                                                <li><a href="Business incubator - a safe start.htm">Business incubator - a safe start</a>
-                                                </li>
-                                                <li><a href="Registration.htm">Registration</a>
-                                                </li>
-                                                <li><a href="License.htm">Licence</a>
-                                                </li>
-                                                <li><a href="Fiscal cash register.htm">Fiscal cash register</a>
-                                                </li>
-                                            </ul>
+                                            <h1>Who is this guide for</h1>
+                                            <div class="Summary">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                                <p>This guide is for you, if you are staying in Poland and have been granted a right to a legal stay here. It includes citizens of UE and EEA*) member states, citizens of the US&#160;and Switzerland, and citizens of other countries, if they have a status listed below.</p>
+                                            </div>
+                                            <p><![CDATA[	]]></p>
+                                            <p>*)&#160;The European Economic Area members are:&#160;the UE&#160;member states and Norway, Iceland, and Lichtenstein</p>
+                                            <h3>Citizens of other countries</h3>
+                                            <p style="text-align: justify;">You need to have a residency title giving you the right to conduct a business activity in Poland. The relevant titles are listed in Article 4 sec. 2, 4 i 5 of <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">the Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland.</a></p>
+                                            <p>These <a name="residency_title"></a>titles are:</p>
+                                            <ol style="list-style-type: upper-roman;">
+                                                <li value="1">Having in the Republic of Poland:<ol style="list-style-type: lower-alpha;"><li value="1">a permanent residence permit</li><li value="2">a residence permit for a long-term resident of the European Union</li><li value="3">a temporary residence permit granted in connection with, inter alia, family reunion with a person legally residing in Poland, or studies in Poland</li><li value="4">a refugee status</li><li value="5">subsidiary protection</li><li value="6">a permit for residence for humanitarian reasons or a permit for a tolerated stay</li><li value="7">a temporary residence permit, and being married to a Polish citizen residing in the territory of the Republic of Poland</li><li value="8">a temporary residence permit for the purpose of conducting business activity, granted in connection with the continuation of business activity already conducted on the basis of an entry in the Central Register and Information on Business Activity</li></ol></li>
+                                                <li value="2">Temporary protection in Poland</li>
+                                                <li value="3">A valid Polish Card</li>
+                                                <li value="4">Being a family member of a UE citizen, i.e.:</li>
+                                                <ul>
+                                                    <li>a spouse of a UE citizen</li>
+                                                    <li>a direct descedant (child) of a UE citizen or a UE citzen’s spouse, aged to 21, or a dependant of a EU citizen or a EU citizen’s spouse</li>
+                                                    <li>a direct ascendant (parent) a UE citizen or a UE citzen’s spouse, being a dependant of a EU citizen or a EU citizen’s spouse</li>
+                                                </ul>
+                                                <li value="5">Having applied for a permit for a temporary or permanent stay – until a decision issued becomes final and biding</li>
+                                            </ol>
+                                            <div class="Action">
+                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                                <ol>
+                                                    <li value="1">Check whether you have a status indicated above.</li>
+                                                    <li value="2">Read section <a href="../A-What you need to know/Who can be a sole trader.htm">Who can be a sole trader</a> of this guide.</li>
+                                                </ol>
+                                            </div>
+                                            <h3>&#160;</h3>
                                         </div>
                                     </div>
                                 </div>
