--- a/References.htm
+++ b/References.htm
@@ -216,13 +216,13 @@
                                         <div role="main" id="mc-main-content">
                                             <h1>References</h1>
                                             <ol>
-                                                <li style="text-align: justify;" value="1"><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">The Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland.</a>
+                                                <li style="text-align: justify;" value="1"><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">The Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland</a>
                                                 </li>
                                                 <li style="text-align: justify;" value="2"><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000646" target="_blank">The Act of 6 March 2018 on entrepreneurship</a> </li>
                                                 <li style="text-align: justify;" value="3"><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002442" target="_blank">The Regulation of the Minister of Finance of 22 December 2021 concerning exemptions from the requirement to register sales with the use of cash registers</a>
                                                 </li>
                                                 <li value="4">
-                                                    <p style="text-align: justify;"><a href="https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">The list of authorisations  (licenses, consents, permits and entries in the registers of regulated activities)&#160;and restrictions (prohibitions to perform an activity specified in the entry in the register of regulated activities) for by individual bodies</a> </p>
+                                                    <p style="text-align: justify;"><a href="https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">The list of authorisations  (licenses, consents, permits, an entries in the registers of regulated activities)&#160;and restrictions (prohibitions to perform an actvity specified in the entry in the register of regulated activities) for by individual bodies</a> </p>
                                                 </li>
                                                 <li value="5">
                                                     <p><a href="https://isap.sejm.gov.pl/isap.nsf/download.xsp/WDU20210002414/O/D20212414.pdf" target="_blank">The Regulation of the Minister of Finance of 17 December 2021 concerning keeping a record of revenues and a list of fixed assets and intangible assets</a>
